@@ -1,6 +1,6 @@
-#$Id: Makefile,v 1.7 2003/06/16 19:46:46 jal2 Exp $
+#$Id: Makefile,v 1.8 2003/07/07 22:02:13 jal2 Exp $
 
-VERSION = 0.11beta1
+VERSION = 0.11beta2
 
 CC=gcc
 
@@ -9,19 +9,20 @@ KERNEL_VERSION = $(shell uname -r)
 KERNEL_SRC = /lib/modules/$(KERNEL_VERSION)/build
 KERNEL_HEADERS = $(KERNEL_SRC)/include
 
-MODULES = at76c503.o usbdfu.o at76c503-rfmd.o at76c505-rfmd.o at76c503-i3861.o at76c503-i3863.o
+MODULES = at76c503.o usbdfu.o at76c503-rfmd.o at76c503-rfmd-acc.o \
+          at76c505-rfmd.o at76c503-i3861.o at76c503-i3863.o
 
-SRCS = at76c503.c usbdfu.c at76c503-rfmd.c at76c505-rfmd.c \
+SRCS = at76c503.c usbdfu.c at76c503-rfmd.c at76c505-rfmd.c at76c503-rfmd-acc.c \
        at76c503-i3861.c at76c503-i3863.c
 HDRS = at76c503.h ieee802_11.h usbdfu.h fw-rfmd-0.90.2-140.h \
-       fw-rfmd-0.100.4-16.h fw-r505.h fw-i3861.h fw-i3863.h
+       fw-rfmd-1.101.0-84.h fw-rfmd-acc-1.101.0-84.h fw-r505.h fw-i3861.h fw-i3863.h
 MODULE_DIR = $(DESTDIR)/lib/modules/$(KERNEL_VERSION)/kernel/drivers/usb/
 CPPFLAGS = -D__KERNEL__ \
 	-DMODULE -DEXPORT_SYMTAB \
 	-DDRIVER_VERSION=\"v$(VERSION)\" \
 	-I$(KERNEL_HEADERS)
 CFLAGS = -O2 -Wall -Wstrict-prototypes -pipe -fno-strict-aliasing \
-         -fno-common -Wno-sign-compare
+         -fno-common -Wno-sign-compare -Wno-unused-variable
 
 MODVER = $(shell if cat $(KERNEL_HEADERS)/linux/autoconf.h 2>/dev/null | \
 grep -q '^[[:space:]]*\#define[[:space:]]*CONFIG_MODVERSIONS[[:space:]]*1'; \
@@ -34,7 +35,7 @@ endif
 CCDEP = $(CC) $(CFLAGS) -M
 TAR = tar
 
-DISTFILES = $(SRCS) $(HDRS) Makefile README COPYING scripts
+DISTFILES = $(SRCS) $(HDRS) Makefile README COPYING CHANGELOG scripts
 TOPDISTFILES = 
 DISTNAME = at76c503-$(VERSION)
 DISTDIR = ../dist
